# BD-synCret

./: .gitignore  README.md  get_prereqs.sh  rebuild_all.sh
rust_src/: Cargo.toml
rust_src/src/: lib.rs
templates/c_template/: c_template.c  rebuild.sh
templates/go_template/: main.go  rebuild.sh
templates/js_template/: js_template.d.ts  js_template.js  rebuild.sh
templates/python_template/: pyproject.toml  pyrightconfig.json  rebuild.sh
templates/python_template/plugin/: __init__.py  plugin.py
templates/rust_src/src/: lib.rs
templates/rust_template/: Cargo.toml
templates/rust_template/src/: lib.rs
templates/zig_template/: build.zig  build.zig.zon
templates/zig_template/src/: main.zig  pdk.zig  schema.zig
vcv_module/: Makefile  dev_build_and_install.sh  plugin.json
vcv_module/res/: manifest.txt
vcv_module/rustism/: Makefile  dev_build_and_install.sh
vcv_module/rustism/res/: manifest.txt
vcv_module/rustism/src/: RustismOsc.cpp  plugin.hpp
vcv_module/src/: BD_synCret.cpp  RustismOsc.cpp  plugin.cpp  plugin.hpp
