[package]
name = "oscillator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.3"
extism-convert = "1.1.0"
extism-pdk = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"

[lib]
crate_type = ["cdylib"]
